Kapitel Controller aktualisiert

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -5,10 +5,10 @@
 %                                            % (siehe http://lefti.amigager.de/latex/Aufbau.html)
 %
 %\usepackage{Common/Layout}
-\input{Enddokumentation/ET_Gruppe/booleans}
+\newcommand{\BrushlessPath}{Enddokumentation/ET_Gruppe}
+\input{\BrushlessPath/booleans}
 \setboolean{EMBED}{true}
 \newcommand{\myTitel}{Dokumentation}
-\newcommand{\BrushlessPath}{Enddokumentation/ET_Gruppe}
 \newcommand{\BLDCTeams}{T27 und T32}
 \newcommand{\BLDCcollab}{Dieses Kapitel ist eine Zusammenarbeit der Gruppen \BLDCTeams. }
 \begin{document}
