--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
@@ -1,9 +1,14 @@
 \begin{landscape}
-	\subsection{Zeit}	
-	 \begin{figure}[h!]
-	    	\includegraphics[page=1,scale=0.8,clip,trim=7mm 90mm 31mm 39mm]{Enddokumentation/Projektplanung_Management/Bilder/Projektzeitachse.pdf}
-	       	\centering
-	       	\caption{Zeitplan des Projekts} 
-	        \label{abb:ProjektZeitstrahl}
-	    \end{figure}
+\subsection{Zeit}	
+    \begin{figure}[h!]
+        \includegraphics[page=1,scale=0.8,clip,trim=7mm 90mm 31mm 39mm] {Enddokumentation/Projektplanung_Management/Bilder/Projektzeitachse.pdf}
+        \centering
+        \caption{Zeitplan des Projekts} 
+        \label{abb:ProjektZeitstrahl}
+    \end{figure}
+    
+    \includegraphics[page=1,scale=0.8,clip,trim=15mm 22mm 13mm 18mm] {Enddokumentation/Projektplanung_Management/Bilder/Projekt-Planung_Team32.pdf}
+    \newpage
+    \includegraphics[page=2,scale=0.8,clip,trim=15mm 100mm 13mm 10mm] {Enddokumentation/Projektplanung_Management/Bilder/Projekt-Planung_Team32.pdf}
+    \newpage
 \end{landscape}
