--- a/Dokumentation/Common/header.tex
+++ b/Dokumentation/Common/header.tex
@@ -60,7 +60,7 @@
 \usepackage{colortbl}
 
     \usepackage{tikz}           % TikZ - "TikZ ist kein Zeichenprogramm"
-    \usepackage{wrapfig} 
+   % \usepackage{wrapfig} 
     \usetikzlibrary{tikzmark}   % References for hooking tikz graphics to
 %
 % Rechnen in Tabellen. Zeichen für den Dezimalpunkt
