Neuer Text hinzugefügt

--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Zeit.tex
@@ -12,3 +12,6 @@
     \includegraphics[page=2,scale=0.8,clip,trim=15mm 100mm 13mm 10mm] {Enddokumentation/Projektplanung_Management/Bilder/Projekt-Planung_Team32.pdf}
     \newpage
 \end{landscape}
+\subsubsection{Erläuterung zur Projektplanung}
+Um grösstmögliche Übersicht zu haben ist die Projektplanung relativ allgemein gehalten. Das heisst es sind alle Themen und Arbeitsblöcke vorhanden, jedoch ist nicht jeder einzelne Arbeitsschritt der darunter anfällt aufgeführt. Ebenso ist jeweils nur die verantwortliche Person aufgeführt. Sie trägt die Hauptverantwortung über ein Arbeitsblock, jedoch können auch andere Personen daran gearbeitet haben. Zeitangaben sind als Schätzungen zu verstehen. Es wurde kein Journal über die geleistete Arbeitszeit geführt.\\
+Dies ist die Projektplanung über den Zeitraum von PREN1. Arbeiten die noch nicht fertig sind oder aber Arbeiten, die sowieso über den ganzen Zeitraum von PREN laufen, werden Ende PREN1 in eine neue Projektplanung PREN2 überführt. Diese wird mit derselben Excel-Planung gemacht. Dadurch, dass abgeschlossene und nicht mehr relevante Arbeiten nicht mehr aufgeführt sind, wird es wesentlich übersichtlicher.  
