Smartphone & Startgerät hinzugefügt
Hinzufügen der 2 Texte

--- a/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
@@ -1,5 +1,8 @@
 \subsubsection{Smartphone als Master}
-	% TODO Livio
+	Der Vorteil bei der Verwendung eines Smartphone ist das mehrere benötigte Geräte bereits auf darauf vorhanden sind, dadurch ist der Zugriff auf die Kamera und eine kabellose Kommunikation bereits gewährleistet. Des Weiteren sind heutige Smartphone verhältnismässig leistungsfähig und können direkt für die Berechnung der Objekterkennung gebraucht werden und durch den integrierten USB-Anschluss kann eine sichere Verbindung zum Controller gewährleistet werden.
+	Die alternative einzelne Module (Kamera, drahtlose Schnittstelle, Recheneinheit) zu verbauen gewährleistet eine erhöhte Flexibilität, allerdings zu kosten des Aufwands und Preises. Der Verbau einzelner Module kann auch zu einer Gewichtszunahme führen da nicht eine solche Kompaktheit wie bei einem Smartphone gewährleistet werden kann. 
+	Der Einsatz eines Smartphone bietet im Vergleich zu einzelnen Modulen mehr Vorteile. Es ist wichtig, dass die Kamera das Spielfeld optimal erfassen kann, weswegen das Smartphone vorne am Gerät angebracht wird. 
+	
 	
 	
 	\paragraph{Korberkennung}
