Lösungskonzept in Latex eingefügt
Siehe oben ^^

--- a/Dokumentation/Enddokumentation/Loesungskonzept/AufbauMechanik.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/AufbauMechanik.tex
@@ -1,1 +1,27 @@
 \subsubsection{Grundaufbau Mechanik}
+Für die Grundplatten wurden diverse Materialen in Betracht gezogen. Zur Auswahl standen Aluminium, Holz und Acrylglas. Eine wichtige Anforderung an das Material war, dass es bei einer kleinen Dichte eine genug gute Festigkeit aufweist. Dies ist nötig, da das Gewicht ei-nen wichtigen Einfluss bei der Bewertung hat. Eine weitere Voraussetzung an das Material ist, dass die Lager der einzelnen Achsen direkt in die Platte gepresst werden können. Dadurch kann der Aufbau sehr Gewichtsoptimiert gebaut werden. Um dies zu überprüfen, wurden verschieden grosse Kugellager in ein Acrylglas gepresst. Die befürchtete Gefahr, dass sich das Acrylglas bei einer zu hohen Presskraft spalten würde, bestätigte sich nicht. Da Aluminium eine viel grössere Festigkeit als die anderen in Frage kommenden Werkstof-fe hat, aber zugleich ein viel höhere Dichte hat, muss eine kleinere Wanddicke verwendet werden um ein kleines Gewicht zu erreichen. Eine gewisse Wanddicke ist erforderlich, um die Lager stabile zu Führen. Weiter besteht bei einer zu geringen Wanddicken die Möglich-keit, dass eine Verformung der Aluminiumbleche hervortritt. Deshalb kommt Aluminium nicht in Frage. Das Holz bietet bei einer kleinen Dichte und eine genügend grosses Elastizi-tätsmodul, doch ist es des sehr heterogen Aufgebaut. Deshalb ist es bei einer kleinen Wanddicke sehr anfällig auf Störstellen, wodurch es zu einem unberechenbaren Versagen führen kann. Aus diesen Gründen ist der Entscheid auf das Acrylglas gefallen. Die Licht-durchlässigkeit spricht auch für das Acrylglas, damit der ganze Ablauf des Ballwurfes bes-ser verfolgt und analysiert werden kann. 
+
+Bei der Konstruktion wurde darauf geachtet, dass der Masseschwerpunkt sehr tief am Bo-den liegt, damit ein nicht zu grosses Moment entsteht, welches vom Abwurf der Bälle er-zeugt wird und den Ballwerfer zum Umkippen bringt. Weiter wird die ganze Kraft des Ball-wurfes über die Bodenplatte abgegeben. Deshalb muss eine hohe Haftreibung erzeugt werden. Dies wird mit einer Antihaftmatte erzeugt, welche zwischen Spielfeld und Boden-platte angebracht wird.
+\begin{figure}
+		\centering
+		\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/Mechanik.jpg}
+		\caption{Grafik mit Losteil / Fixteil eingefärbt}
+		\label{fig:Mechanik}	
+\end{figure}
+
+\begin{table}
+	\centering
+	\caption{Dichte der Stoffe}
+	\label{tab:(http://schulmodell.eu/index.php/physik/503-dichte-fester-stoffe.html)}
+
+	\begin{tabular}{|c|c|c|c|}
+		\hline Material & Dichte & Gewicht (550x120xT) & Re (Elastizitätsmodul) \\ 
+		\hline Holz 5mm & 0.8g/cm3 & 264g & 10 – 17 kN/mm^2 \\ 
+		\hline Aluminium 3mm & 2.71g/cm3 & 536g & 1000 kN/mm^2 \\ 
+		\hline Acrylglas 5mm & 1.19g/cm3 & 393g & 3300 N/mm^2  \\ 
+		\hline 
+	\end{tabular} 
+\end{table}
+ 		
+ 			
+
