--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -1,1 +1,31 @@
 \subsection{Geräteübersicht}
+Der Ballwerfer ist so konzipiert, dass er aus einem fixstehenden Basismodul besteht, wel-ches in der Mitte des Startbereiches positioniert wird. Die Abwurfeinheit, welche den Ball-wurfmechanismus und die Ballzuführung beinhaltet, ist auf dem Basismodul drehend gela-gert. Dieser wird mit einem Schrittmotor auf das Ziel ausgerichtet. Der ganze Aufbau des Ballwurfmechanismus ist sehr einfach gehalten. Er besteht Hauptsächlich aus zwei Acryl-glasplatten, in welchen alle mechanischen Vorrichtungen gelagert sind. Dadurch kann der ganze Aufbau sehr schnell und einfach angepasst oder geändert werden. Die Ausrichtung des Abwurfmechanismus erfolgt durch einen Schrittmotor, welcher im oberen, mitdrehen-den Bereich angebracht ist. Dadurch ist die Bauhöhe des Ballwerfers sehr klein, was einen grossen Stabilitätsvorteil gibt. Die Drehachse der Abwurfeinheit ist an der Spitze des Ball-werfers mit einem Bolzens angebracht. Somit bleibt die Abwurfposition der Tennisbälle im-mer am gleichen Ort. Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder drehen gegenläufig, womit der Tennisball dazwischen ausgestossen wird. Die Zuführung der Tennisbälle erfolgt mit einem Förderband. Es ist sehr wichtig, dass alle Bälle mit der gleichen Geschwindigkeit bei den Schwungrädern eintreffen und somit die gleiche Startenergie aufweisen. Dadurch ist eine gleichmässige Wurfweite gewährleistet. 
+\begin{figure}
+		\centering
+		\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/Geraeteuebersicht.jpg}
+		\caption{Geräteübersicht}
+		\label{fig:Geraeteuebersicht}
+\end{figure}}
+\begin{table}
+	\centering
+	\caption{Bezeichnung der Teilkomponenten}
+	\label{tab:BezTeilkomponenten}
+	\begin{tabular}{|c|c|c|}
+		\hline Pos & Bezeichnung & Funktion \\ 
+		\hline 1 & Startgerät (Smartpho-ne) & Senden Startbefehls, Empfangen Endbefehl
+		Akustische & visuelle Signalausgabe
+		\\ 
+		\hline 2 & Master  (Smartphone) & Empfangen des Startbefehls, Senden End-befehl
+		Fotografieren und Auswerten, Steuern des Controllers
+		\\ 
+		\hline 3 & Controller & Steuerung und Regelung der Antriebe \\ 
+		\hline 4 & Gestell & Stabilisieren des Systems
+		Seitliche Führung der Bälle
+		\\ 
+		\hline 5 & Stelleinheit & Ausrichten des Gerätes zum Korb \\ 
+		\hline 6 & Förderband & Ballförderung zu Schwungräder \\ 
+		\hline 7 & Schwungräder inkl. Antrieb & Beschleunigen der Bälle \\ 
+		\hline 
+	\end{tabular} 
+\end{table}
+In den folgenden Abschnitten wird nach dem zeitlichen Ablauf des Balles, die einzelnen Komponenten des Ballwerfers näher beschrieben. 
