--- a/Dokumentation/Enddokumentation/Loesungskonzept/Schwungraeder.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Schwungraeder.tex
@@ -1,1 +1,23 @@
 \subsubsection{Schwungräder}
+Die Vortriebskraft für die Tennisbälle wird durch zwei Schwungräder übertragen. Die Schwungräder sind konkav ausgerundet, so dass die Beschleunigung nicht nur über einen Punkt übertragen wird. Durch die Ausrundung kann die Kraft über eine grössere Fläche (Linie) und geführt übertragen werden. Dies bringt den Vorteil, dass die Beschleunigung geführt abläuft, wodurch ein gerichteter Wurf entsteht. So kann das benötigte Beschleuni-gungsmoment vollumfänglich den Tennisbällen übergeben werden. Die Ausrundung wurde durch den Radius des Tennisballes gegeben. Der Durchmesser der Schwungräder ist so festgelegt, dass mit der vorhandenen Masse ein gewisses Trägheitsmoment zur Verfügung steht. Dies ist nötig, damit bei der Beschleunigung der Tennisbälle die Schwungräder nicht zu stark abgebremst werden. Dennoch sollten sie nicht zu schwer und gross sein, da das Gewicht ein wichtiger Faktor in der Gesamtbewertung ist. Die Grösse ist deshalb auf einen Kompromiss gefallen. Durch den Durchmesser wird auch die Winkelgeschwindigkeit festge-legt. Die Schwungräder sind aus PVC gefertigt. Dieser Werkstoff ist einfach zu Bearbeiten und bietet zugleich eine genügend grosse Festigkeit. Die Räder sind mit einer speziellen Haftmatte beschichtet, damit die Kraft optimal auf den Ball übertragen werden kann. \\
+Die Achsen der zwei Schwungräder sind im Winkel von 45° zur Bodenplatte angeordnet. Der Abschusswinkel ist so gewählt, dass die Tennisbälle in einem genug grossen Ein-schlagwinkel im Zielbereich landen und keine Möglichkeit besteht mit dem Korbrand zu kol-lidieren. Das Verhältnis von Wurfkraft zu Wurflänge ist beim Winkel von 45° auch am bes-ten. Die Wurfweite wird durch die Drehzahl der Schwungräder gesteuert werden. Der Ach-senabstand der beiden Schwungräder bestimmt die Presskraft der einzelnen Bälle. Dies wiederum gibt die Abbremsung der Schwungräder vor. Die Abbremsung darf nicht zu gross sein, damit die einzelnen Bälle in kurzem Abstand hintereinander zugeführt werden kann. 
+\begin{figure}
+	\centering
+	\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/Schwungraeder.jpg}
+	\caption{Schwungräder}
+	\label{fig:Schwungräder}	
+\end{figure}
+Die Schwungräder sollen aus einem Kunststoffkern sowie einem aufgeklebtem Gummiele-ment bestehen, welches eine gewisse Nachgiebigkeit aufweist, und ein Durchrutschen der Bälle verhindern soll.  Die konkave Form der Räder gibt dem Ball die genaue Richtung der Flugbahn vor.
+\underline{4.2.8.1	Antriebsstrang}
+-Zahnräder
+-minimale Sicherheiten
+Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewählte Vari-anten wurden betreffend ihrem Nutzen (verfügbares Drehmoment), ihren Kosten und ihrem Gewicht beurteilt.
+\begin{table}
+	\centering
+	\label{tab:Antriebsstrang}
+	Miaazuuuuuuuuuuuzzzz
+\end{table}
+
+Aufgrund des hohen Drehmomentes und des geringen Gewichtes bei mittelmässigen Kos-ten, ist dies die idealste Lösung für den Antriebsstrang. Es wird ein bürstenloser Elektromo-tor verwendet. Die Ansteuerung des Motors ist sehr anspruchsvoll.
+
+\underline{4.2.8.2	Ansteuerung und Regelung bürstenloser Motoren}
