--- a/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
+++ b/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
@@ -9,8 +9,13 @@ Nach der Recherche folgte als nächster Schritt das Erstellen einer Funktionsski
 \end{figure}
 Auf Grundlage der Recherche konnte zu jedem Teilproblem eine Anzahl Lösungsansätze genannt werden. In einem nächsten Schritt erfolgte die Beurteilung jedes einzelnen Lösungsansatzes mittels möglichst einheitlichen Bewertungskriterien. Jedem Lösungsansatz ist schlussendlich eine Prozentzahl zugeordnet, in wie fern die Lösung die Höchstanforderung des jeweiligen Teilproblems erfüllt. Um diese Werte sinnvoll als Entscheidungshilfe einsetzen zu können, führt man alle Teilprobleme, unterteilt in die möglichen Lösungsansätze, in einem Dokument (Grobkonzept) zusammen. \\
 \\
-%Bild Grobkonzept
-Das Grobkonzept erlaubt es grafisch verschiedene Kombinationsmöglichkeiten aufzuzeigen. Um möglichst vielen differenzierten Ansätzen Rechnung zu tragen, wurden vier Varianten während einer Diskussionsrunde festgelegt.\\\\ 
+\begin{figure}
+	\centering
+	\includegraphics[width=0.9\textwidth]{Enddokumentation/Varianten/Bilder/Grobkonzept.png}
+	\caption{Grobkonzept}
+	\label{fig:Grobkonzept}
+\end{figure}
+Das Grobkonzept erlaubt es grafisch verschiedene Kombinationsmöglichkeiten aufzuzeigen. Um möglichst vielen differenzierten Ansätzen Rechnung zu tragen, wurden vier Varianten während einer Diskussionsrunde festgelegt.\\\\
 !!!!! Achtung: wenn Grobkonzept mit Bild im Text, Variantennummern in Farben umbenennen. !!!!\\\\
 Eine Variante ist die Kombination aller Lösungsansätze mit der höchsten Prozentzahl. Eine zweite Variante basiert auf der Idee, die Bälle in eine Kugel einzuschliessen, das Gerät parallel zur Spielfeldwand zu verschieben und den Kübel mit einer Smartphone-Kamera zu erkennen. Der Ballwerfer soll durch einen Akkumulator mit Energie versorgt werde. Die dritte Variante hat als Ausgangspunkt die Bälle in einem Drehkranz und befördert diese einzeln in den Korb, die restlichen Kriterien werden Kongruent zur zweiten Variante ausgeführt. In der vierten Variante befördert der Ballwerfer die Bälle aus der Startposition in bogenförmiger Kurve in den Korb. Die Ausgabe der Bälle erfolgt vereinzelt, die übrigen Teilprobleme verwenden wiederum, Kongruent zur zweiten Variante, eine Smartphone-Kamera zur Korberkennung und ein Akkumulator als Energieversorgung.\\
 \\
