--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -43,6 +43,7 @@
     %
     % Lösungskonzept
     %
+    \newpage
     \input{Enddokumentation/Loesungskonzept/Loesungskonzept}
     \input{Enddokumentation/Loesungskonzept/Funktionsbeschreibung}
     \newpage
