--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -1,5 +1,6 @@
 \subsection{Geräteübersicht}
-Der Ballwerfer ist so konzipiert, dass er aus einem fixstehenden Basismodul besteht, wel-ches in der Mitte des Startbereiches positioniert wird. Die Abwurfeinheit, welche den Ball-wurfmechanismus und die Ballzuführung beinhaltet, ist auf dem Basismodul drehend gela-gert. Dieser wird mit einem Schrittmotor auf das Ziel ausgerichtet. Der ganze Aufbau des Ballwurfmechanismus ist sehr einfach gehalten. Er besteht Hauptsächlich aus zwei Acryl-glasplatten, in welchen alle mechanischen Vorrichtungen gelagert sind. Dadurch kann der ganze Aufbau sehr schnell und einfach angepasst oder geändert werden. Die Ausrichtung des Abwurfmechanismus erfolgt durch einen Schrittmotor, welcher im oberen, mitdrehen-den Bereich angebracht ist. Dadurch ist die Bauhöhe des Ballwerfers sehr klein, was einen grossen Stabilitätsvorteil gibt. Die Drehachse der Abwurfeinheit ist an der Spitze des Ball-werfers mit einem Bolzens angebracht. Somit bleibt die Abwurfposition der Tennisbälle im-mer am gleichen Ort. Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder drehen gegenläufig, womit der Tennisball dazwischen ausgestossen wird. Die Zuführung der Tennisbälle erfolgt mit einem Förderband. Es ist sehr wichtig, dass alle Bälle mit der gleichen Geschwindigkeit bei den Schwungrädern eintreffen und somit die gleiche Startenergie aufweisen. Dadurch ist eine gleichmässige Wurfweite gewährleistet. 
+Der Ballwerfer ist so konzipiert, dass er aus einem fixstehenden Basismodul besteht, welches in der Mitte des Startbereiches positioniert wird. Die Abwurfeinheit, welche den Ballwurfmechanismus und die Ballzuführung beinhaltet, ist auf dem Basismodul drehend gelagert. Ein Schrittmotor richtet die Abwurfeinheit auf das Ziel aus. Der ganze Aufbau des Ballwurfmechanismus ist möglichst einfach gehalten. Er besteht Hauptsächlich aus zwei Acrylglasplatten, in welcher alle mechanischen Vorrichtungen gelagert sind. Dadurch kann der ganze Aufbau schnell und einfach angepasst oder geändert werden. Die Ausrichtung des Abwurfmechanismus erfolgt durch einen Schrittmotor, welcher in der drehenden Abwurfeinheit angebracht ist. Dadurch kann die Bauhöhe des Ballwerfers tief gehalten werden, was einen grossen Stabilitätsvorteil bietet. Die Drehachse am vorderen Ende der Abwurfeinheit ist an der Spitze des Ballwerfers mit einem Bolzens angebracht. Somit bleibt die Abwurfposition der Tennisbälle konstant am gleichen Ort.
+Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder drehen gegenläufig, der Tennisball wird dazwischen ausgestossen. Die Zuführung der Tennisbälle erfolgt mit einem eigens geregelten Förderband. Das Förderband muss die Bälle mit konstanter Geschwindigkeit zu den Schwungrädern transportieren, damit alle Tennisbälle die gleiche Startenergie aufweisen. Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewährleistet. 
 \begin{figure}
 		\centering
 		\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/Geraeteuebersicht.jpg}
@@ -12,10 +13,10 @@ Der Ballwerfer ist so konzipiert, dass er aus einem fixstehenden Basismodul best
 	\label{tab:BezTeilkomponenten}
 	\begin{tabular}{|c|c|c|}
 		\hline Pos & Bezeichnung & Funktion \\ 
-		\hline 1 & Startgerät (Smartpho-ne) & Senden Startbefehls, Empfangen Endbefehl
+		\hline 1 & Startgerät (Smartphone) & Senden Startbefehls, Empfangen Endbefehl
 		Akustische & visuelle Signalausgabe
 		\\ 
-		\hline 2 & Master  (Smartphone) & Empfangen des Startbefehls, Senden End-befehl
+		\hline 2 & Master  (Smartphone) & Empfangen des Startbefehls, Senden Endbefehl
 		Fotografieren und Auswerten, Steuern des Controllers
 		\\ 
 		\hline 3 & Controller & Steuerung und Regelung der Antriebe \\ 
