--- a/Dokumentation/Enddokumentation/ET_Gruppe/Hardwarezusammenarbeit.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/Hardwarezusammenarbeit.tex
@@ -7,12 +7,12 @@
 Die Elektrotechnik-Studierenden aus mehreren Gruppen haben sich
 zusammengeschlossen um gemeinsame Probleme anzugehen. Dabei handelt es sich
 um die Ansteuerung, die benötigte Hard- und Software um Motoren anzusteuern
-und gegebenenfalls zu regeln. In diesem Zusammenschluss wurde drei Gruppen
+und gegebenenfalls zu regeln. In diesem Zusammenschluss wurden drei Gruppen
 gebildet, um Lösungen für DC-, Stepper- und Brushless-Motoren auszuarbeiten.
-Die Idee besteht darin, dass nicht jede Gruppe für dasselbe Problem wo
-möglich denselben Lösungsansatz verfolgt, sondern die Ressourcen kombiniert,
-Synergien nutzt um eine bessere Lösung zu erarbeiten. Auf diese Weise kann
-das Team übergreifende Arbeiten im Rahmen der \enquote{PREN} erlernt und
+Die Idee besteht darin, dass nicht jede Gruppe für dasselbe Problem
+denselben Lösungsansatz verfolgt, sondern die Ressourcen kombiniert,
+Synergien nutzt, um eine bessere Lösung zu erarbeiten. Auf diese Weise kann
+das Team übergreifende Arbeiten im Rahmen des \enquote{PREN} erlernt und
 geübt werden. Somit wird Idee der Interdisziplinarität im erweiterten Sinn
 Rechnung getragen. Die Gruppen und deren Mitglieder sind in der Tabelle 
 \ref{tab:pren-et-overview} aufgeführt.
