--- a/Dokumentation/Enddokumentation/Loesungskonzept/Funktionsbeschreibung.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Funktionsbeschreibung.tex
@@ -1,9 +1,10 @@
 \subsection{Funktionsbeschreibung}
-Der Ballwerfer befindet sich in der Ausgangsposition in der Startfeldmitte. Nach einer drahtlosen Übermittlung des Startsignals beginnt das Smartphone auf dem Ballwerfer mit der Korberkennung. Zeitgleich werden die Schwungräder auf ihre Nenndrehzahl beschleunigt. Durch die Auswertung des fotografierten Bildes wird die Position des Korbes ermittelt und aus dieser einen Winkel für die Justierung der Abwurfeinheit des Ballwerfers berechnet. Nach der Übermittlung des Winkels an den Controller richtet der Stellantrieb die Abwurfeinheit in die gewünschte Wurfposition aus. Ein Förderband befördert anschliessend die Bälle zu den Schwungrädern, wo diese auf ihre Abwurfgeschwindigkeit beschleunigt werden. Die Bälle verlassen nacheinander das Gerät und fliegen in einer Wurfparabel direkt in den Korb. Sobald sich alle Bälle im Korb befinden (zeitabhängig), wird das akustische Endsignal auf dem Smartphone ausgegeben.
+Der Ballwerfer befindet sich in der Ausgangsposition in der Startfeldmitte. Nach einer drahtlosen Übermittlung des Startsignals beginnt das Smartphone auf dem Ballwerfer mit der Korberkennung. Zeitgleich werden die Schwungräder auf ihre Nenndrehzahl beschleunigt. Durch die Auswertung des fotografierten Bildes wird die Position des Korbes ermittelt und aus dieser einen Winkel für die Justierung der Abwurfeinheit des Ballwerfers berechnet.\\
+Nach der Übermittlung des Winkels an den Controller richtet der Stellantrieb die Abwurfeinheit in die gewünschte Wurfposition aus. Ein Förderband befördert anschliessend die Bälle zu den Schwungrädern, wo diese auf ihre Abwurfgeschwindigkeit beschleunigt werden. Die Bälle verlassen nacheinander das Gerät und fliegen in einer Wurfparabel direkt in den Korb. Sobald sich alle Bälle im Korb befinden (zeitabhängig), wird das akustische Endsignal auf dem Smartphone ausgegeben.
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/FlowOnChart_v2.jpg}
 	\caption{Funktionsskizze}
 	\label{fig:FlowChart}
 \end{figure}
-Die Grafik stellt den schematischen Ablauf der oben erwähnten Funktionen dar. Einige Teilschritte des Ablaufes, wie zum Beispiel das Beschleunigen der Schwungräder werden je nach zeitlicher Dauer oder möglich auftretenden Störungen (in Form von Vibrationen) verschoben.
+Die Grafik(Funktionsskizze) stellt den schematischen Ablauf der oben erwähnten Funktionen dar. Einige Teilschritte des Ablaufes, wie zum Beispiel das Beschleunigen der Schwungräder werden je nach zeitlicher Dauer oder möglich auftretenden Störungen (in Form von Vibrationen) verschoben.
