--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -7,14 +7,13 @@ Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder
 		\caption{Geräteübersicht}
 		\label{fig:Geraeteuebersicht}
 \end{figure}}
-\begin{table}
+\begin{figure}[h!]
 	\centering
-	\caption{Bezeichnung der Teilkomponenten}
+	\caption{Bezeichnung der Teilkomponenten}	
 	\label{tab:BezTeilkomponenten}
 	\begin{tabular}{|c|c|c|}
 		\hline Pos & Bezeichnung & Funktion \\ 
-		\hline 1 & Startgerät (Smartphone) & Senden Startbefehls, Empfangen Endbefehl
-		Akustische & visuelle Signalausgabe
+		\hline 1 & Startgerät (Smartphone) & Senden Startbefehls, Empfangen Endbefehl, Akustische,visuelle Signalausgabe
 		\\ 
 		\hline 2 & Master  (Smartphone) & Empfangen des Startbefehls, Senden Endbefehl
 		Fotografieren und Auswerten, Steuern des Controllers
@@ -28,5 +27,5 @@ Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder
 		\hline 7 & Schwungräder inkl. Antrieb & Beschleunigen der Bälle \\ 
 		\hline 
 	\end{tabular} 
-\end{table}
+\end{figure}
 In den folgenden Abschnitten wird nach dem zeitlichen Ablauf des Balles, die einzelnen Komponenten des Ballwerfers näher beschrieben. 
