--- a/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
+++ b/Dokumentation/Enddokumentation/Tests/BrushlessMotorTest.tex
@@ -1,6 +1,6 @@
 \subsection{Brushless-Motor-Test}
-    \input{BrushlessPath/Ansteuerung}
+    \input{\BrushlessPath/Ansteuerung}
     \newpage
-    \input{BrushlessPath/Testbericht}
-    \input{BrushlessPath/fallback}
-    \input{BrushlessPath/encoder}
+    \input{\BrushlessPath/Testbericht}
+    \input{\BrushlessPath/fallback}
+    \input{\BrushlessPath/encoder}
