--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -1,12 +1,12 @@
 \subsection{Geräteübersicht}
-Der Ballwerfer ist so konzipiert, dass er aus einem fixstehenden Basismodul besteht, welches in der Mitte des Startbereiches positioniert wird. Die Abwurfeinheit, welche den Ballwurfmechanismus und die Ballzuführung beinhaltet, ist auf dem Basismodul drehend gelagert. Ein Schrittmotor richtet die Abwurfeinheit auf das Ziel aus. Der ganze Aufbau des Ballwurfmechanismus ist möglichst einfach gehalten. Er besteht Hauptsächlich aus zwei Acrylglasplatten, in welcher alle mechanischen Vorrichtungen gelagert sind. Dadurch kann der ganze Aufbau schnell und einfach angepasst oder geändert werden. Die Ausrichtung des Abwurfmechanismus erfolgt durch einen Schrittmotor, welcher in der drehenden Abwurfeinheit angebracht ist. Dadurch kann die Bauhöhe des Ballwerfers tief gehalten werden, was einen grossen Stabilitätsvorteil bietet. Die Drehachse am vorderen Ende der Abwurfeinheit ist an der Spitze des Ballwerfers mit einem Bolzens angebracht. Somit bleibt die Abwurfposition der Tennisbälle konstant am gleichen Ort.
-Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder drehen gegenläufig, der Tennisball wird dazwischen ausgestossen. Die Zuführung der Tennisbälle erfolgt mit einem eigens geregelten Förderband. Das Förderband muss die Bälle mit konstanter Geschwindigkeit zu den Schwungrädern transportieren, damit alle Tennisbälle die gleiche Startenergie aufweisen. Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewährleistet. 
-\begin{figure}
+Der Ballwerfer ist so konzipiert, dass er aus einem fixstehenden Basismodul besteht, welches in der Mitte des Startbereiches positioniert wird. Die Abwurfeinheit, welche den Ballwurfmechanismus und die Ballzuführung beinhaltet, ist auf dem Basismodul drehend gelagert. Ein Schrittmotor richtet die Abwurfeinheit auf das Ziel aus. Der ganze Aufbau des Ballwurfmechanismus ist möglichst einfach gehalten. Er besteht Hauptsächlich aus zwei Acrylglasplatten, in welcher alle mechanischen Vorrichtungen gelagert sind. Dadurch kann der ganze Aufbau schnell und einfach angepasst oder geändert werden. Die Ausrichtung des Abwurfmechanismus erfolgt durch einen Schrittmotor, welcher in der drehenden Abwurfeinheit angebracht ist. Dadurch kann die Bauhöhe des Ballwerfers tief gehalten werden, was einen grossen Stabilitätsvorteil bietet. Die Drehachse am vorderen Ende der Abwurfeinheit ist an der Spitze des Ballwerfers mit einem Bolzens angebracht. Somit bleibt die Abwurfposition der Tennisbälle konstant am gleichen Ort.\\
+Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder drehen gegenläufig, der Tennisball wird dazwischen ausgestossen. Die Zuführung der Tennisbälle erfolgt mit einem eigens geregelten Förderband. Das Förderband muss die Bälle mit konstanter Geschwindigkeit zu den Schwungrädern transportieren, damit alle Tennisbälle die gleiche Startenergie aufweisen. Dadurch ist eine gleichmässige Wurfweite und eine hohe Reproduzierbarkeit gewährleistet. \\
+\begin{figure}[h!]
 		\centering
 		\includegraphics[width=0.9\textwidth]{Enddokumentation/Loesungskonzept/Bilder/Geraeteuebersicht.jpg}
 		\caption{Geräteübersicht}
 		\label{fig:Geraeteuebersicht}
-\end{figure}}
+\end{figure}}\\
 \begin{figure}[h!]
 	\centering
 	\caption{Bezeichnung der Teilkomponenten}	
@@ -27,5 +27,5 @@ Die Tennisbälle werden durch zwei Schwungräder beschleunigt. Die Schwungräder
 		\hline 7 & Schwungräder inkl. Antrieb & Beschleunigen der Bälle \\ 
 		\hline 
 	\end{tabular} 
-\end{figure}
+\end{figure}\\
 In den folgenden Abschnitten wird nach dem zeitlichen Ablauf des Balles, die einzelnen Komponenten des Ballwerfers näher beschrieben. 
