--- a/Dokumentation/Enddokumentation/Loesungskonzept/Schwungraeder.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Schwungraeder.tex
@@ -20,4 +20,4 @@ Der Antriebsstrang kann auf verschiedene Arten realisiert werden. Drei ausgewäh
 
 Aufgrund des hohen Drehmomentes und des geringen Gewichtes bei mittelmässigen Kosten, ist dies die idealste Lösung für den Antriebsstrang. Es wird ein bürstenloser Elektromotor verwendet. Die Ansteuerung des Motors ist sehr anspruchsvoll.
 
-\newline %\underline{Ansteuerung und Regelung bürstenloser Motoren}
+\newline\underline{Ansteuerung und Regelung bürstenloser Motoren}
