--- a/Dokumentation/Morphologie/Feinkonzept.tex
+++ b/Dokumentation/Morphologie/Feinkonzept.tex
@@ -1,4 +1,4 @@
-%\parindent0pt{\Large{\textcolor{red}{Dieses Kapitel ist noch nicht offiziell Bestandteil des Testat 2.}}}
+\parindent0pt{\Large{\textcolor{red}{Dieses Kapitel ist noch nicht offiziell Bestandteil des Testat 2.}}}
 \section{Feinkonzept}
 	Nach der Entscheidung für ein Grobkonzept folgt nun die Detaillierung dieses Konzeptes in ein Feinkonzept. Die ursprünglich sieben Teilprobleme wurden in 19 Subteilprobleme auf gesplittet. Zu all diesen Subteilproblemen existieren wiederum Lösungsvarianten, die in Abbildung \ref{abb:Feinkonzept} dargestellt sind.
 	
