--- a/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
@@ -1,13 +1,14 @@
-\subsubsection{Smartphone als Master}
-	Der Vorteil bei der Verwendung eines Smartphone ist das mehrere benötigte Geräte bereits auf darauf vorhanden sind, dadurch ist der Zugriff auf die Kamera und eine kabellose Kommunikation bereits gewährleistet. Des Weiteren sind heutige Smartphone verhältnismässig leistungsfähig und können direkt für die Berechnung der Objekterkennung gebraucht werden und durch den integrierten USB-Anschluss kann eine sichere Verbindung zum Controller gewährleistet werden.
-	Die alternative einzelne Module (Kamera, drahtlose Schnittstelle, Recheneinheit) zu verbauen gewährleistet eine erhöhte Flexibilität, allerdings zu kosten des Aufwands und Preises. Der Verbau einzelner Module kann auch zu einer Gewichtszunahme führen da nicht eine solche Kompaktheit wie bei einem Smartphone gewährleistet werden kann. 
-	Der Einsatz eines Smartphone bietet im Vergleich zu einzelnen Modulen mehr Vorteile. Es ist wichtig, dass die Kamera das Spielfeld optimal erfassen kann, weswegen das Smartphone vorne am Gerät angebracht wird. 
+\subsubsection{Smartphone als Plattform}
+	Die Verwendung eines Smartphones ist das mehrere benötigte Geräte bereits auf darauf vorhanden sind, dadurch ist der Zugriff auf die Kamera wie auch eine kabellose Kommunikation bereits gewährleistet. Des Weiteren sind heutige Smartphones verhältnismässig leistungsfähig, die Berechnungen für die Objekterkennung kann direkt auf dem Gerät erfolgen und durch den USB-Port wird eine sichere Verbindung zum Controller gewährleistet.\\
+	Die alternative, einzelne Module (Kamera, drahtlose Schnittstelle, Recheneinheit) zu verbauen, gewährleistet eine erhöhte Flexibilität, allerdings zu kosten des Aufwands und Preises. Dieser Lösungsansatz kann auch zu einer Gewichtszunahme führen da keine vergleichbare Kompaktheit wie bei einem Smartphone gewährleistet werden kann. Der Einsatz eines Smartphones bietet im Vergleich zu einzelnen Modulen mehr Vorteile.\\
+	 Es ist wichtig, dass die Kamera das Spielfeld optimal erfassen kann, weswegen das Smartphone vorne am Gerät angebracht wird. Eine Befestigung an der Front des Gerät bietet sich an da dort eine hohe Stabilität gewährleistet werden kann, was für eine möglichst optimale Bildaufnahme wichtig ist.\\
 	
 	
 	
 	\paragraph{Korberkennung}
 	Im nachfolgenden Ablaufdiagramm ist die Funktionsweise des Systems zur Korberkennung dargestellt. Erwähnenswert hierbei ist vor allem, dass zur Identifikation des Korbes im Bild kein gegebenes Framework wie etwa OpenCV verwendet wird. \\
 	% Flowchart (Ablaufdiagramm) fehlt
+	
 	Für die Bestimmung der Position des Korbes wurde ein Algorithmus entwickelt und in Java implementiert. Dieser bedient sich des Umstandes, dass der Korb deutlich dunkler als der Hintergrund ist. Um mit dem von der Kamera zuvor aufgenommenen Bild arbeiten zu können, müssen die Ränder abgeschnitten werden (vor allem links und rechts geht der Bildbereich über das Spielfeld hinaus, was das Resultat verfälschen könnte) Als zweiter Schritt wird über sämtliche Pixel des Bildes iteriert. Dabei wird für jedes Pixel die Helligkeit bestimmt anhand einer vordefinierten Schwelle entschieden, ob es zum Hintergrund (heller) oder zum Korb (dunkel) gehört. Anschliessend wird der Schwerpunkt der dunklen Pixel bestimmt und anhand des gefundenen Schwerpunktes entweder von links oder von rechts her in einem bestimmten horizontalen Bereich (der Korb befindet sich immer auf der selben Höhe) über die Pixel iteriert um dabei eine feste Kontur zu finden. Diese feste Kontur wird dabei definiert durch eine bestimmte Anzahl weisse Pixel, auf welche wiederum eine Menge schwarzer Pixel folgen muss. Da dieser Prozess immer in derselben horizontalen Ebene stattfindet kann durch eine abschliessende Berechnung der Mittelpunkt des Korbes und der damit verbundene Winkel des Ballwerfers zum Korb trigonometrisch bestimmt werden.\\
 	% Flowchart Detection-Subprozess fehlt
 	
